<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <Spinner
            android:id="@+id/spinner_courses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_note_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/title_hint_note"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
            app:layout_constraintStart_toStartOf="@+id/spinner_courses"
            app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

        <EditText
            android:id="@+id/text_note_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/text_hint_note"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/text_note_title"
            app:layout_constraintStart_toStartOf="@+id/text_note_title"
            app:layout_constraintTop_toBottomOf="@+id/text_note_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
